fix(LiveResume2): fix layout issue where other sections grow when experiences section is lengthy

--- a/src/components/BuilderPage/LiveResume2/Certifications/Certifications.module.scss
+++ b/src/components/BuilderPage/LiveResume2/Certifications/Certifications.module.scss
@@ -1,7 +1,3 @@
-.certificates {
-  grid-area: certifications;
-}
-
 .certifications>h2 {
   font-family: var(--aileron-font);
   font-weight: 700;
