--- a/src/components/BuilderPage/LiveResume2/Education/Education.module.scss
+++ b/src/components/BuilderPage/LiveResume2/Education/Education.module.scss
@@ -1,7 +1,3 @@
-.education {
-  grid-area: education;
-}
-
 .education>h2 {
   font-family: var(--aileron-font);
   font-weight: 700;
