--- a/src/components/BuilderPage/LiveResume2/Experiences/Experiences.module.scss
+++ b/src/components/BuilderPage/LiveResume2/Experiences/Experiences.module.scss
@@ -1,7 +1,3 @@
-.experiences {
-  grid-area: experiences;
-}
-
 .experiences>h2 {
   font-family: var(--aileron-font);
   font-weight: 700;
