--- a/src/components/BuilderPage/LiveResume2/TechSkills/TechSkills.module.scss
+++ b/src/components/BuilderPage/LiveResume2/TechSkills/TechSkills.module.scss
@@ -1,7 +1,3 @@
-.techSkills {
-  grid-area: skills;
-}
-
 .techSkills>h2 {
   font-family: var(--aileron-font);
   font-weight: 700;
